main_app/static/css/main.css
:root {
    --primary-color: rgb(20, 33, 61); 
    --secondary-color: #36827F;
    --accent-color: #C89933;
    --ivory-color: #F5F1ED;
    --success-color: #28A745;
    --info-color: #4983b4;
    --warning-color: #e88820;
    --danger-color: #d22937;
    --light-color: #e7e7e7;
    --dark-color: #343A40;
}

html, body{
    height: 100%;
}

/* Misc */
.nowrap{
    white-space: nowrap;
}

/* Sidebar */

.vertical-nav{
    min-width: 17rem;
    width: 17rem;
    height: 100vh;
    position: fixed;
    top: 0;
    left: 0;
    box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.3);
    transition: all 0.4s;
}

#sidebarToggle{
    position: fixed;
    left: 17rem;
    transition: all 0.4s;
}

#logo-title{
    color: #fff;
    letter-spacing: 4px;
}

.nav-icon{
    transition: font-size 0.3s ease-in-out;
}

img#nav-logo{
    transition: all 0.3s ease-in-out;
}

.nav-link{
    color: #fff;
    padding-top: 0.7rem;
    padding-bottom: 0.7rem;
}

.nav-link:hover{
    background-color: rgba(0, 0, 0, 0.4);
    color: var(--accent-color);
}

.vertical-nav.active {
    width: 4rem;
    min-width: 4rem;
}

#content.active {
    width: calc(100% - 4rem);
    margin: 0;
    margin-left: 4rem;
}

footer.active {
    width: calc(100% - 4rem);
}

#sidebarToggle.active{
    left: 4rem;
}

.nav-text.active, #logo-title.active{
    display: none;
}

#user-title.active{
    visibility: hidden;
}

.nav-link.active{
    text-align: center;
}

.nav-icon.active{
    font-size: 24px;
}

.currentPage{
    background-color: rgba(0, 0, 0, 0.4);
}

/* Page Content */

.page-content{
    width: calc(100% - 17rem);
    height: calc(100% - 10rem);
    min-height: calc(100vh - 10rem);
    margin-left: 17rem;
    padding: 3rem;
    padding-top: 5rem;
    transition: all 0.4s;
    overflow: auto;
    
}

/* Footer */

footer{
    position: fixed;
    bottom: 0;
    right: 0;
    width: calc(100% - 17rem);
    height: 10rem;
    background-color: #000000;
    color: #fff;
    box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.1);
    transition: all 0.4s;
    padding: 1rem 1rem 0 1rem;
    overflow: auto;
}

footer > .wrapper{
    display: grid;
    grid-template-columns: 1.5fr 1fr 1fr 1fr;
    grid-template-rows: 1fr;
    grid-gap: 1rem;
}

.footer-link{
    color: #fff;
}

.footer-link:hover, #sidebarToggle:hover{
    color: var(--accent-color);
}

/* Location Details */
.map {
    height: 300px;
    width: 100%;
    border: solid var(--primary-color) 2px;
    border-radius: 5px;
}

.table {
    width: 100%;
}

.first-column{
    max-width: 150px;
    white-space: normal;
    padding-right: 2px;
}

.value-cell{
    text-align: center;
}

#save-btn{
    border-radius: 5px;
}

/* Forms */

#login, #signup{
    /* width: 100%;
    height: 100%; */
}

#login > div >  p{
    text-align: left;
}

#login > div > p > label{
    min-width: 7rem;
}

#login > div > ul{
    list-style-type: none;
    padding: 0;
    margin: 0;
    margin-bottom: 10px;
    color: var(--danger-color);
}

#login > div{
    max-width: 400px;
    padding: 1rem;
}

#signup > div{
    max-width: 500px;
    padding: 1rem;
}

.signup-label > label {
    min-width: 12rem;
    color: var(--accent-color);
    font-weight: 650;
}

.login-label > label {
    min-width: 6rem;
    color: var(--accent-color);
    font-weight: 650;
}

#signup > div > p > input, #login > div > p > input {
    height: 40px;
    font-size: 16px;
    color: #333;
    padding: 10px;
    border: 1px solid #ccc;
    border-radius: 4px;
    box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1);
}

#login-container, #signup-container{
    height: 100%;
}

/* Home */

.home-top > img{
    width: 150px;
    height: auto;
    display: inline-block;
}

#site-title{
    color: var(--accent-color);
    letter-spacing: 7px;
    font-weight: 600;
    margin-left: 5px;
}

.full-width{
    width: 100%;
}

#normal-search > span > input{
    border: var(--accent-color) 2px solid;
    padding: 5px;
    min-width: 20rem;
}

#what3-auto > div > div > span {
    background-color: transparent;
    color: #fff;
    border: none;
}

.what3words-autosuggest-error{
    background-color: var(--primary-color) !important;
    position: absolute !important;
    bottom: -30px !important;
    left: 0 !important;
    width: 100% !important;
    height: auto !important;
    z-index: 9999 !important;
}

.what3words-autosuggest-message{
    color: var(--accent-color) !important;
}



/* .pac-container{
    background-color: var(--primary-color);
}

.pac-icon{
    color: var(--accent-color) !important;
}

.pac-item{
    color: #79e82a;
}

.pac-item:hover{
    background-color: var(--secondary-color);
}

.pac-iten-query{
    color: var(--accent-color) !important;
}

.pac-matched{
    color: var(--secondary-color) !important;
} */



/* Styles for screens smaller than 768px */
@media screen and (max-width: 767px) {

    /* Footer */
    footer > .wrapper{
        text-align: center;
        grid-template-columns: 1fr 1fr;
        grid-template-rows: 1fr 0.7fr 1fr;
    }

    footer > .wrapper > div:first-of-type, footer > .wrapper > div:last-of-type{
        grid-column: span 2;
    }

  }

  /* Styles for screens smaller than 690px */
@media screen and (max-width: 690px) {
    /* Home */
    #location_search_btn{
        margin-top: 10px;
    }
  }

